src/styles/global.scss
@use './responsive/small.scss';
@use './responsive/medium.scss';

@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");

html,
body {
  font-family: "Poppins", sans-serif, monospace;
  scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  padding: {
    top: 0;
    right: 1em;
    bottom: 0;
    left: 1em;
  }
}

h3 {
  color: hsl(70, 50%, 75%);
  font-family: "Roboto Mono", monospace;
  font-size: 1.5em;
  font-weight: 700;
  margin: 1em auto;
}

ul + p {
    margin-top: 1em;
}


address {
    h4,
    span {
        display: block;
        padding: 0;
        text-align: left;
        
    }
}

